--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,41 @@
     "php": "^8.2",
     "slim/slim": "^4.13",
     "slim/psr7": "^1.7",
+    "mongodb/mongodb": "^1.19",
     "psr/http-message": "^1.1",
     "psr/http-server-handler": "^1.0",
-    "psr/http-server-middleware": "^1.0"
+    "psr/http-server-middleware": "^1.0",
+    "ramsey/uuid": "^4.7"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.89",
+    "phpstan/phpstan": "^2.1",
+    "phpunit/phpunit": "^10.0"
   },
   "autoload": {
     "psr-4": {
       "App\\": "src/"
     }
   },
-  "scripts": {
-    "start": [
-      "php server.php"
-    ]
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
   },
+    "scripts": {
+        "start": [
+            "php server.php"
+        ],
+        "test": "phpunit",
+        "test:unit": "phpunit --testsuite=Unit",
+        "test:integration": "phpunit --testsuite=Integration",
+        "cs-fix": "php-cs-fixer fix --config=.php-cs-fixer.php",
+        "cs-check": "php-cs-fixer fix --config=.php-cs-fixer.php --dry-run --diff",
+        "stan": "phpstan analyse src --level=5 --memory-limit=256M",
+        "stan:level0": "phpstan analyse src --level=0 --memory-limit=256M",
+        "stan:level5": "phpstan analyse src --level=5 --memory-limit=256M",
+        "stan:level8": "phpstan analyse src --level=8 --memory-limit=256M"
+    },
   "config": {
     "optimize-autoloader": true,
     "sort-packages": true
